<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ndroid="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">



    <ImageView
        android:id="@+id/User"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/user"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:gravity="center"

            android:hint="@string/Login_email"
            />
        <EditText
            android:id="@+id/txt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_email"
            android:gravity="center"
            android:layout_weight="1"
            android:hint="@string/Login_password"
            android:singleLine="true"

            android:inputType="textPassword" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginLayout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button            android:id="@+id/bLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Button_login" />

        <Button
            android:id="@+id/bCancle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Button_cancle" />
    </LinearLayout>

    <TextView
        android:id="@+id/Registerlink"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:onClick="Onregister"
        android:text="@string/Loin_regis"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="23dp"
        android:textStyle="bold"
        android:layout_below="@+id/buttonLayout"
        android:layout_alignEnd="@+id/User" />

</RelativeLayout>